# C-Table-Tennis-League

./: CMakeLists.txt  Change.cpp  League.cpp  ListMatches.cpp  ListMatches.h  ListPlayers.h  Match.cpp  Match.h  Player.h  README.md  Read_write.cpp  match_result.txt  names_correct.txt  names_wrong.txt  planMatch_correct.txt  planMatch_wrong.txt  test1.cpp  test3.cpp  test4.cpp
codes/: CMakeLists.txt  League.cpp  League.h  ListMatches.cpp  ListMatches.h  ListPlayers.cpp  Ordering.cpp  Player.cpp  Read_write.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
